<resources>
    <string name="app_name">MP Vagas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hi">Olá!</string>
    <string name="title_toolbar">MP vagas</string>
    <string name="intro">Bem vindo, preencha os campos e clique no botão abaixo para concorrer
        a uma das nossas vagas.</string>
    <string name="fl_nome">Nome</string>
    <string name="btn_avancar">AVANÇAR</string>
    <string name="fl_email">Email</string>
    <string name="msg_skill">Avalie seus conhecimentos de 0 a 10.</string>
    <string name="html">HTML: </string>
    <string name="css">CSS: </string>
    <string name="javascript">JavaScript: </string>
    <string name="python">Python: </string>
    <string name="django">Django: </string>
    <string name="ios">iOS: </string>
    <string name="android">Android: </string>
    <string name="btn_salvar">SALVAR</string>

</resources>
